--- a/data/en/sections/about.yml
+++ b/data/en/sections/about.yml
@@ -23,9 +23,15 @@ summary: 'TODO'
 # your social links
 # give as many as you want. use font-awesome for the icons.
 socialLinks:
+- name: Email
+  icon: "fas fa-envelope"
+  url: "mbbcarlos@gmail.com"
 - name: Github
   icon: "fab fa-github"
   url: "https://www.github.com/mbbcarlos"
+- name: LinkedIn
+  icon: "fab fa-linkedin"
+  url: "https://www.linkedin.com/in/marta-carlos-244390162/"
 
 # your soft skills
 # give the percentage between 50 to 100 with 5 intervals.
