--- a/data/en/sections/experiences.yml
+++ b/data/en/sections/experiences.yml
@@ -41,7 +41,7 @@ experiences:
     name: Núcleo de Informática NOVA SST
     url: "https://ninf-fct.org"
     location: Monte da Caparica, Portugal
-    overview: TODO
+    overview: Student club with the goal of providing computer science students more contact with companies and knowledge outisde of class
   positions:
     - designation: Vice-President
       start: March 2019
