--- a/config.yaml
+++ b/config.yaml
@@ -17,6 +17,10 @@ markup:
     startLevel: 2
     endLevel: 6
     ordered: false
+  markup:
+  goldmark:
+    renderer:
+      unsafe: true
 
 # Enable global emoji support
 enableEmoji: true
@@ -25,7 +29,16 @@ enableEmoji: true
 params:
   background: "images/bg-3.jpg"
   # GitHub repo URL of your site
-  gitRepo: https://github.com/mbbcarlos/mbbcarlos.github.io
+  # gitRepo: https://github.com/mbbcarlos/mbbcarlos.github.io
+
+  # Provide logos for your site. The inverted logo will be used in the initial
+  # transparent navbar and the main logo will be used in the non-transparent navbar.
+  # It will default to the theme logos if not provided.
+  logo:
+    main: images/main-logo.svg
+    inverted: images/inverted-logo.svg
+    favicon: images/favicon.png
+  
 
   # specify whether you want to write some blog posts or not
   enableBlogPost: true
@@ -37,3 +50,7 @@ params:
   # Currently, you can just hide it from the footer.
   newsletter:
     enable: false
+  
+  # customMenus:
+  # - name: Notes
+  #   url: https://hossainemruz.gitbook.io/notes/
