--- a/data/en/author.yml
+++ b/data/en/author.yml
@@ -3,7 +3,7 @@ name: "Marta Carlos"
 nickname: "Marta"
 # greeting message before your name. it will default to "Hi! I am" if not provided
 greeting: "Hi, I am"
-image: "images/perfil.jpg"
+image: "images/perfil-3.png"
 # give your some contact information. they will be used in the footer
 contactInfo:
   email: "mbbcarlos@gmail.com"
