--- a/config.yaml
+++ b/config.yaml
@@ -24,7 +24,7 @@ markup:
 
 # Enable global emoji support
 enableEmoji: true
-
+googleAnalytics: G-VQKYPD22NR
 # Site parameters
 params:
   background: "images/bg-3.jpg"
