--- a/data/en/sections/about.yml
+++ b/data/en/sections/about.yml
@@ -15,10 +15,10 @@ company:
   url: "https://www.fct.unl.pt/en"
 
 # your resume. this file path should be relative to you "static" directory
-resume: "files/Marta-Carlos-resume.pdf"
+resume: "files/Marta-Carlos-CV-Eng.pdf"
 
 # a summary about you
-summary: 'A computer science student with recent interest in video game developing'
+summary: 'A future computer science ex-student, with a passion for making pretty things and currently learning Flutter'
 
 # your social links
 # give as many as you want. use font-awesome for the icons.
@@ -41,8 +41,14 @@ softSkills:
   percentage: 80
   color: blue
 - name: Team Work
-  percentage: 80
+  percentage: 90
   color: green
 - name: Hard Working
   percentage: 90
   color: pink
+- name: Communication
+  percentage: 80
+  color: yellow
+- name: Fast Learner
+  percentage: 80
+  color: light blue
