--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,10 +1,9 @@
 version: 2
 updates:
 # Update the git submodules
-- package-ecosystem: "gitsubmodule"
+- package-ecosystem: "npm"
   directory: "/"
   schedule:
     interval: "daily"
   labels:
   - "dependencies"
-  - "automerge"
